Server almost ready to go
Refactored most of the code.
TODO: TCP CONNECTION CAUSES ERRORS; DELETE DATABASE DOESN`T WORK